wip: authenticate the user and stock is data
