# apps/api/src/libs/auth/auth.schema.ts
@@ -1,5 +1,6 @@
 import { OpenapiFactory } from "@cosmoosjs/hono-openapi";
 import type { user } from "@prisma/client";
+import type { LoginResponse } from "./auth.interface";
 
 export const AuthRegisterInputSchema = OpenapiFactory.generateSchema<user>({
   schemaName: 'AuthRegisterInputSchema',
@@ -58,6 +59,42 @@ export const AuthLoginInputSchema = OpenapiFactory.generateSchema<user & { googl
     {
       name: 'googleClientId',
       required: false,
+      type: 'string',
+    },
+  ]
+})
+
+export const AuthLoginResponseSchema = OpenapiFactory.generateSchema<LoginResponse>({
+  schemaName: 'AuthResponseSchema',
+  params: [
+    {
+      name: 'id',
+      required: true,
+      type: 'string',
+    },
+    {
+      name: 'username',
+      required: true,
+      type: 'string',
+    },
+    {
+      name: 'name',
+      required: true,
+      type: 'string',
+    },
+    {
+      name: 'lastname',
+      required: true,
+      type: 'string',
+    },
+    {
+      name: 'email',
+      required: true,
+      type: 'string',
+    },
+    {
+      name: 'token',
+      required: true,
       type: 'string',
     },
   ]
