# apps/e-commerce/src/app/api/models.ts
@@ -2,3 +2,4 @@
 /* eslint-disable */
 export { AuthLoginInputSchema } from './models/auth-login-input-schema';
 export { AuthRegisterInputSchema } from './models/auth-register-input-schema';
+export { AuthResponseSchema } from './models/auth-response-schema';
