# apps/e-commerce/src/app/api/models/auth-response-schema.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AuthResponseSchema {
+  email: string;
+  id: string;
+  lastname: string;
+  name: string;
+  username: string;
+  token: string;
+  expiresAt: number;
+}
